Remove usages of apis not supported on Android